# Galaxy-Translator

./: CMakeLists.txt  README.md  iodialog.cpp  iodialog.h  iodialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  texteditor.cpp  texteditor.h
